clang/test/BSC/Negative/Ownership/RuleCheck/void_owned_cast_to_T_owned/void_owned_cast_to_T_owned.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

struct Node {
  int value;
};

struct Inner {
  int *_Owned data;
};

struct Holder {
  int *_Owned leaf;
  struct Inner *_Owned inner;
};

typedef struct {
  int *_Owned p;
} S;

void consume_int(int *_Owned p);
void consume_node(struct Node *_Owned p);
void consume_inner(struct Inner *_Owned p);
void consume_holder(struct Holder *_Owned p);
void consume_s(S *_Owned);
void safe_free(void *_Owned p);

void test1(struct Inner *_Owned p) {
  safe_free((void *_Owned)p->data);
  void *_Owned erased = (void *_Owned)p;
  struct Inner *_Owned typed = (struct Inner *_Owned)erased;
  consume_inner(typed); // expected-error {{use of all moved value: `typed`}}
}

void test2(struct Inner *_Owned p) {
  safe_free((void *_Owned)p->data);
  void *_Owned erased = (void *_Owned)p;
  struct Inner *_Owned typed;
  typed = (struct Inner *_Owned)erased;
  consume_inner(typed); // expected-error {{use of all moved value: `typed`}}
}

void test3(int *_Owned leafSrc, struct Inner *_Owned innerSrc) {
  safe_free((void *_Owned)innerSrc->data);
  void *_Owned leafErased = (void *_Owned)leafSrc;
  void *_Owned innerErased = (void *_Owned)innerSrc;
  struct Holder h = {
      .leaf = (int *_Owned)leafErased,
      .inner = (struct Inner *_Owned)innerErased,
  };
  consume_int(h.leaf);
  consume_inner(h.inner); // expected-error {{use of partially moved value: `h.inner`, h.leaf, h.inner.data are moved}}
}

void test4(int *_Owned leafSrc, struct Inner *_Owned innerSrc) {
  struct Holder h = {.leaf = nullptr, .inner = nullptr};
  safe_free((void *_Owned)innerSrc->data);
  void *_Owned leafErased = (void *_Owned)leafSrc;
  void *_Owned innerErased = (void *_Owned)innerSrc;
  h.leaf = (int *_Owned)leafErased;
  h.inner = (struct Inner *_Owned)innerErased;
  consume_int(h.leaf);
  consume_inner(h.inner); // expected-error {{use of partially moved value: `h.inner`, h.leaf, h.inner.data are moved}}
}

void test5(struct Holder *_Owned h, void *_Owned erased) {
  safe_free((void *_Owned)h->inner->data);
  safe_free((void *_Owned)h->inner);
  h->inner = (struct Inner *_Owned)erased;
  consume_holder(h); // expected-error {{use of partially moved value: `h`, h.inner.data is moved}}
}

S *_Owned test6(void *_Owned p) {
  return (S *_Owned)p; // expected-error {{cannot pass or return a cast from 'void *_Owned' to 'S *_Owned' because it would use a moved value}}
}

void test7(void *_Owned p) {
  consume_s((S *_Owned)p); // expected-error {{cannot pass or return a cast from 'void *_Owned' to 'S *_Owned' because it would use a moved value}}
}

S *_Owned test8(int cond, void *_Owned a, void *_Owned b) {
  return cond ? (S *_Owned)a : (S *_Owned)b; // expected-error {{cannot pass or return a cast from 'void *_Owned' to 'S *_Owned' because it would use a moved value}}
} // expected-error {{memory leak of value: `a`}}
  // expected-error@-1 {{memory leak of value: `b`}}

void test9(int cond, void *_Owned a, void *_Owned b) {
  consume_s(cond ? (S *_Owned)a : (S *_Owned)b); // expected-error {{cannot pass or return a cast from 'void *_Owned' to 'S *_Owned' because it would use a moved value}}
} // expected-error {{memory leak of value: `a`}}
  // expected-error@-1 {{memory leak of value: `b`}}

void test10(int cond, void *_Owned a, S *_Owned b) {
  S *_Owned s = cond ? (S *_Owned)a : b;
  consume_s(s); // expected-error {{use of all moved value: `s`}}
} // expected-error {{memory leak of value: `a`}}
  // expected-error@-1 {{memory leak of value: `b`}}
  // expected-error@-2 {{field memory leak of value: `b`, b.p is leak}}
